fixed text alignment https://github.com/dexlab-io/DexEx/issues/2

--- a/src/common/loopringui/assets/style/utils.less
+++ b/src/common/loopringui/assets/style/utils.less
@@ -2350,7 +2350,7 @@
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: left !important;
 }
 
 @media (min-width: 576px) {
